<resources>
    <string name="app_name">SensorX</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timer">Timer :</string>
    <string name="test_connection">Test Connection</string>
    <string name="exp_1">Exp 1 - Flat Track (Ongoing)</string>
    <string name="exp_2">Exp 2 - Slope Track (Ongoing)</string>
    <string name="weight">Weight :</string>
    <string name="height">Height :</string>
    <string name="time">Time :</string>
    <string name="age">Age :</string>
    <string name="send">Send</string>
    <string name="click_me">Delete</string>
</resources>