<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#673AB7"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="520dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <Button
                android:id="@+id/set_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="168dp"
                android:backgroundTint="#4CAF50"
                android:text="Set"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="208dp"
                android:layout_marginTop="168dp"
                android:backgroundTint="#F44336"
                android:text="Reset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/reset_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="208dp"
                android:layout_marginTop="372dp"
                android:backgroundTint="#F44336"
                android:text="Reset"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/set_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="372dp"
                android:backgroundTint="#4CAF50"
                android:text="Set"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="436dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="104dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight_input"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="kg" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="172dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height_input"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="224dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="inches" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="35dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_input"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="years" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="195dp"
                android:layout_marginTop="96dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/sensor_pos_spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="195dp"
                android:layout_marginTop="316dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/walk_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="316dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <Spinner
                android:id="@+id/track_spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="195dp"
                android:layout_marginTop="252dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="260dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timer_input"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="236dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="minutes" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/material_switch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="452dp"
                android:text="@string/start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:switchPadding="5dp" />

            <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="464dp"
                android:text="@string/timer"
                app:layout_constraintStart_toEndOf="@+id/material_switch"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="464dp"
                app:layout_constraintStart_toEndOf="@+id/timerText"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="230dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/stop_timer_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="295dp"
                android:layout_marginTop="452dp"
                android:backgroundTint="#673AB7"
                android:text="Stop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_accl_x"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toStartOf="@id/chart_gyro_x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_gyro_x"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chart_accl_x"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_accl_y"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toStartOf="@id/chart_gyro_y"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart_accl_x" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_gyro_y"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chart_accl_y"
            app:layout_constraintTop_toBottomOf="@+id/chart_accl_x" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_accl_z"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toStartOf="@id/chart_gyro_z"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart_accl_y" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_gyro_z"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chart_accl_z"
            app:layout_constraintTop_toBottomOf="@+id/chart_accl_y" />




        <Button
            android:id="@+id/testConnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E91E63"
            android:text="@string/test_connection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_accl_z" />

        <Button
            android:id="@+id/send_data_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="275dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFC107"
            android:text="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart_accl_z" />

        <TextView
            android:id="@+id/connection_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart_accl_z" />

        <View
            android:id="@+id/divider3"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="50dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testConnButton" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:context=".MainActivity">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>